// src/proto/session.proto
syntax = "proto3";

package session;

import "general.proto";
import "user_messages.proto";

message Ticket {
  string id = 1;
  int32 ticket_number = 2;
  optional user.User user = 3;
  session.Session session = 4;
}

message Session {
  string id = 1;
  string date = 2;
  general.TimeSlot time_slot = 3;
  int32 room_number = 4;
  repeated Ticket tickets = 5;
}